--- a/Dotnet.Homeworks.Mailing.API/appsettings.json
+++ b/Dotnet.Homeworks.Mailing.API/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailConfig": {
+    "Email": "",
+    "Host": "",
+    "Port": 0,
+    "Password": ""
+  },
+  "RabbitMqConfig": {
+    "Username": "",
+    "Password": "",
+    "Hostname": ""
+  },
   "AllowedHosts": "*"
 }
