--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,11 @@ services:
       dockerfile: Dotnet.Homeworks.MainProject/Dockerfile
     depends_on:
       - dotnet_postgres
+      - dotnet_rabbitmq
     environment:
+      RabbitMqConfig__Username: rmuser
+      RabbitMqConfig__Password: rmpassword
+      RabbitMqConfig__Hostname: amqp://rabbitmq:5672
       ConnectionStrings__Default : Host=localhost;Database=dotnet_postgres_db;Port=5432;Username=superCoolUserName;Password=superCoolUserPassword138 
         
   dotnet_postgres:
@@ -24,8 +28,36 @@ services:
     ports:
       - '5432:5432'
     
-#  dotnet_rabbitmq:
-#    image: rabbitmq:3-alpine
+  dotnet_mailing:
+    container_name: dotnet_mailing
+    image: dotnet_mailing
+    build:
+      context: .
+      dockerfile: Dotnet.Homeworks.Mailing.API/Dockerfile
+    environment:
+      RabbitMqConfig__Username : rmuser
+      RabbitMqConfig__Password : rmpassword
+      RabbitMqConfig__Hostname : amqp://rabbitmq:5672
+      EmailConfig__Email : ildar.smtp.example@gmail.com
+      EmailConfig__Host : smtp.gmail.com
+      EmailConfig__Port : 25
+      EmailConfig__Password : Z5W-yme-Jsf-mDP
+    ports:
+      - "5001:80"
+    depends_on: 
+      - dotnet_rabbitmq
+  
+  dotnet_rabbitmq:
+    container_name: dotnet_rabbitmq
+    image: rabbitmq:3-alpine
+    hostname: rabbitmq
+    restart: always
+    environment:
+      RABBITMQ_DEFAULT_USER : rmuser
+      RABBITMQ_DEFAULT_PASS : rmpassword
+    ports:
+      - 15672:15672
+      - 5672:5672
     
 #  dotnet_minio:
 #    image: minio/minio:latest
@@ -34,10 +66,7 @@ services:
 #    image: mongo:latest
     
 #  dotnet_jaeger:
-#    image: jaegertracing/all-in-one:latest
-    
-#  dotnet_mailing:
-#    image: dotnet-web
+#    image: jaegertracing/all-in-one:latest  
     
 #  dotnet_storage:
 #    image: dotnet-web
