--- a/Dotnet.Homeworks.Storage.API/appsettings.json
+++ b/Dotnet.Homeworks.Storage.API/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "MinioConfig": {
+    "Username": "superUser",
+    "Password": "superUserPass123",
+    "Endpoint": "localhost",
+    "Port": 9000,
+    "WithSsl": false
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
