--- a/Dotnet.Homeworks.Storage.API/Dotnet.Homeworks.Storage.API.csproj
+++ b/Dotnet.Homeworks.Storage.API/Dotnet.Homeworks.Storage.API.csproj
@@ -8,13 +8,17 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Dotnet.Homeworks.Shared\Dotnet.Homeworks.Shared.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Dotnet.Homeworks.Shared\Dotnet.Homeworks.Shared.csproj" />
+      <PackageReference Include="Minio" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
