--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,23 @@ services:
     depends_on: 
       - dotnet_rabbitmq
   
+  dotnet_storage:
+    container_name: dotnet-storage
+    image: dotnet-web
+    build:
+      context: .
+      dockerfile: Dotnet.Homeworks.Storage.API/Dockerfile
+    environment:
+      MinioConfig__Username: superUser
+      MinioConfig__Password: superUserPass123
+      MinioConfig__Endpoint: dotnet_minio
+      MinioConfig__Port: 9000
+      MinioConfig__WithSsl: false
+    ports:
+      - "5002:80"
+    depends_on: 
+      - dotnet_minio
+  
   dotnet_rabbitmq:
     container_name: dotnet_rabbitmq
     image: rabbitmq:3-alpine
@@ -59,14 +76,30 @@ services:
       - 15672:15672
       - 5672:5672
     
-#  dotnet_minio:
-#    image: minio/minio:latest
+  dotnet_minio:
+    container_name: dotnet_minio
+    image: minio/minio:latest
+    command: server --console-address ":9001" /data/
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: superUser
+      MINIO_ROOT_PASSWORD: superUserPass123
+    volumes:
+      - minio-storage:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+      
+volumes:
+  minio-storage:
+
     
 #  dotnet_mongodb:
 #    image: mongo:latest
     
 #  dotnet_jaeger:
 #    image: jaegertracing/all-in-one:latest  
-    
-#  dotnet_storage:
-#    image: dotnet-web
